tests/valid/expressions/v04_real.f
program reals
  real x, y, z
  x = 3.14
  y = 2.0
  z = x * y
  print *, z
end
