tests/invalid/variables/i02_undeclared_print.f
program undecl
  integer x
  x = 5
  print *, z
end
